--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@ h1 {
 
 html {
   scroll-behavior: smooth;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
   color: var(--clr-black);
   background-color: var(--clr-white);
 }
