--- a/css/styles.css
+++ b/css/styles.css
@@ -46,15 +46,96 @@ img {
   max-width: 100%;
 }
 
-.wrapper {
-  padding: 2em 1em;
+.flow > * + * {
+  margin-top: 1.5rem;
 }
 
-.wrapper > * + * {
-  margin-top: 1rem;
+.wrapper {
+  padding: 2em 1em;
 }
 
 .header__title {
   font-size: 1.5rem;
   color: var(--clr-dark-gray2);
+}
+
+.products {
+  background-color: var(--clr-very-light-gray);
+  border-radius: 12px;
+  padding: 2em;
+}
+
+.product {
+  display: flex;
+}
+
+.product__image {
+  width: 40%;
+  border-radius: 10px;
+}
+
+.product__details {
+  margin-left: 1.5rem;
+  color: var(--clr-dark-gray2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.product__title {
+  font-size: 0.75rem;
+}
+
+.price {
+  display: flex;
+  align-items: center;
+  margin-top: 0.4rem;
+}
+
+.price__after {
+  color: var(--clr-orange);
+  font-size: 0.875rem;
+}
+
+.price__before {
+  font-size: 0.625rem;
+  margin-left: 1rem;
+}
+
+.quantity {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100px;
+  border: 1px solid var(--clr-mild-gray);
+  border-radius: 12px;
+  padding: 1.2em 0.8em;
+}
+
+.quantity__btn {
+  border: none;
+  background-color: var(--clr-light-gray);
+  color: var(--clr-mild-gray);
+  border-radius: 4px;
+}
+
+.quantity__count {
+  color: var(--clr-very-dark-gray);
+}
+
+.checkout-info {
+  margin-top: 5rem;
+}
+
+.checkout-info__content {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em 0;
+  color: var(--clr-very-dark-gray);
+  font-size: 0.875rem;
+}
+
+.shipping {
+  border-top: 1px solid var(--clr-gray);
+  border-bottom: 1px solid var(--clr-gray);
 }
